<resources>
    <string name="app_name">Demo Dialog</string>
    <string name="d1">DEMO 1 - SIMPLE DIALOG</string>
    <string name="d2">DEMO 2 - BUTTONS DIALOG</string>
    <string name="d3">DEMO 3 - TEXT INPUT DIALOG</string>
    <string name="enter">Enter some text</string>
    <string name="exercise_3">Exercise 3</string>
    <string name="d4">DEMO 4 DATEPICKER DIALOG</string>
    <string name="d5">DEMO 5 - TIMEPICKER DIALOG</string>
</resources>
