<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <Button
    android:id="@+id/buttonDemo1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/d1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonDemo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d2"
            />

        <TextView
            android:id="@+id/demoTv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonDemo3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d3"
            />

        <TextView
            android:id="@+id/demoTv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/exe3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise_3"
            />

        <TextView
            android:id="@+id/exeTv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonDemo4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d4"
            />

        <TextView
            android:id="@+id/demoTv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonDemo5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d5"
            />

        <TextView
            android:id="@+id/demoTv5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>